[gd_scene load_steps=17 format=2]

[ext_resource path="res://title_menu/title_menu.gd" type="Script" id=1]
[ext_resource path="res://title_menu/img/choose_exit.png" type="Texture" id=2]
[ext_resource path="res://title_menu/img/start.png" type="Texture" id=3]
[ext_resource path="res://title_menu/sound/ui_confirm.wav" type="AudioStream" id=4]
[ext_resource path="res://title_menu/sound/test_music.wav" type="AudioStream" id=5]
[ext_resource path="res://title_menu/img/bg.png" type="Texture" id=6]
[ext_resource path="res://title_menu/img/exit.png" type="Texture" id=7]
[ext_resource path="res://title_menu/img/choose_start.png" type="Texture" id=8]
[ext_resource path="res://title_menu/img/choose_continue.png" type="Texture" id=9]
[ext_resource path="res://setting_menu/Setting_menu.tscn" type="PackedScene" id=10]
[ext_resource path="res://title_menu/img/continue.png" type="Texture" id=11]
[ext_resource path="res://title_menu/img/setting.png" type="Texture" id=12]
[ext_resource path="res://title_menu/img/choose_setting.png" type="Texture" id=13]
[ext_resource path="res://title_menu/sound/ui_focus_button.wav" type="AudioStream" id=14]
[ext_resource path="res://host_menu/host_menu.tscn" type="PackedScene" id=15]
[ext_resource path="res://join_menu/join_menu.tscn" type="PackedScene" id=16]

[node name="title_menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="VBoxContainer_button" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -775.0
margin_top = -811.0
margin_right = -200.0
margin_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="start_button" type="TextureButton" parent="VBoxContainer_button"]
margin_right = 575.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 155, 200 )
rect_clip_content = true
focus_neighbour_top = NodePath("../exit_button")
focus_neighbour_bottom = NodePath("../load_button")
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="load_button" type="TextureButton" parent="VBoxContainer_button"]
margin_top = 204.0
margin_right = 575.0
margin_bottom = 404.0
rect_min_size = Vector2( 165, 200 )
focus_neighbour_top = NodePath("../start_button")
focus_neighbour_bottom = NodePath("../option_button")
texture_normal = ExtResource( 11 )
texture_focused = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="option_button" type="TextureButton" parent="VBoxContainer_button"]
margin_top = 408.0
margin_right = 575.0
margin_bottom = 608.0
rect_min_size = Vector2( 160, 200 )
focus_neighbour_top = NodePath("../load_button")
focus_neighbour_bottom = NodePath("../exit_button")
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = ExtResource( 12 )
texture_focused = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="exit_button" type="TextureButton" parent="VBoxContainer_button"]
margin_top = 612.0
margin_right = 575.0
margin_bottom = 812.0
rect_min_size = Vector2( 165, 200 )
focus_neighbour_top = NodePath("../option_button")
focus_neighbour_bottom = NodePath("../start_button")
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="sound_effect_focus_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -14.858
bus = "Effect"

[node name="sound_effect_confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effect"

[node name="setting_menu" parent="." instance=ExtResource( 10 )]
unique_name_in_owner = true

[node name="host_menu" parent="." instance=ExtResource( 15 )]
unique_name_in_owner = true

[node name="join_menu" parent="." instance=ExtResource( 16 )]
unique_name_in_owner = true

[node name="profile_name" type="Panel" parent="."]
margin_left = 892.0
margin_top = 819.0
margin_right = 1600.0
margin_bottom = 1011.0
__meta__ = {
"_edit_group_": true
}

[node name="profile_name_label" type="Label" parent="profile_name"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.5
margin_top = -60.0
margin_right = 189.5
margin_bottom = 60.0
text = "ชื่อผู้เล่น"
align = 1
valign = 1

[node name="profile_name_change_button" type="Button" parent="profile_name"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 7.0
margin_top = -1.0
margin_right = 239.0
margin_bottom = 193.0
text = "เปลี่ยน"

[connection signal="focus_entered" from="VBoxContainer_button/start_button" to="." method="play_effect_focus_button"]
[connection signal="pressed" from="VBoxContainer_button/start_button" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer_button/load_button" to="." method="play_effect_focus_button"]
[connection signal="pressed" from="VBoxContainer_button/load_button" to="." method="_on_load_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer_button/option_button" to="." method="play_effect_focus_button"]
[connection signal="pressed" from="VBoxContainer_button/option_button" to="." method="_on_option_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer_button/exit_button" to="." method="play_effect_focus_button"]
[connection signal="pressed" from="VBoxContainer_button/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="profile_name/profile_name_change_button" to="." method="_on_profile_name_change_button_pressed"]
